小修改，测试git

--- a/static/css/login/style.login.css
+++ b/static/css/login/style.login.css
@@ -92,3 +92,10 @@ button{
     color:#c2fbfe;
 }
 form{ position:absolute;z-index:100 }
+#form-captcha .img{
+    width:40%;
+}
+
+#id_captcha_1{
+    width: 50%
+}
