--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -4,7 +4,7 @@
 
 
 {% block title %}
-大发基金 | 登录页面 123123
+大发基金 | 登录页面
 {% endblock %}
 
 
@@ -32,7 +32,7 @@
           {% if message %}
                   <div class="alert alert-warning">{{ message }}</div>
               {% endif %}
-              
+
               {% csrf_token %}
 
 
@@ -47,8 +47,8 @@
         <div class="form-group group-captcha">
                   {{ login_form.captcha }}
                   {{ login_form.captcha.errors }}
-                  
-                  
+
+
         </div>
         <button type="submit" class="btn"><i class="fas fa-sign-in-alt"></i>登录</button>
       </form>
@@ -56,8 +56,8 @@
 
 
 
-      <div class="col-12 forget">
-        <a href="#">忘记密码？| 点击处理</a>
+      <div class="forget">
+        <a href="/register">忘记密码？</a>|<a href="/register"> 点击注册</a>
       </div>
     </div><!-- End of Modal Content -->
   </div>
