--- a/templates/login/register.html
+++ b/templates/login/register.html
@@ -31,14 +31,14 @@
       <div class="col-12 ">
         <h1>大发基金</h1>
       </div>
-          <form class='form-register' action="/register/" method="post">
- 
+          <form class='form-register col-12' action="/register/" method="post">
+
               {% if message %}
                   <div class="alert alert-warning">{{ message }}</div>
               {% endif %}
- 
+
               {% csrf_token %}
- 
+
 
               <div class="form-group group-icon-1">
                   {{ register_form.username}}
@@ -50,7 +50,7 @@
                   {{ register_form.password2 }}
               </div>
 
-              <div class="form-group">
+              <div class="form-group col-12" id="form-captcha">
                   {{ register_form.captcha.errors }}
                   {{ register_form.captcha }}
 
