基本实现了试玩和新人大礼包

--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -276,6 +276,15 @@
 
 
 {% include 'includeBase.html' %}
+
+{% if messages %}
+	<script>
+		{% for msg in messages %}
+			alert('{{msg.message}}');
+		{% endfor %}
+	</script>
+{% endif %}
+
 {% endblock %}
 
 
