--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -18,6 +18,21 @@
 {% block content %}
 
 <div class=" text-center">
+
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %} style="">
+                {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
+                {{ message }}
+            </li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+
+
+
+
   <div class="col-12 col-sm-8 main-section">
     <div clas="modal-content">
       <div class="col-12 user-img">
@@ -63,6 +78,9 @@
   </div>
 
 </div>
+
+
+
 
 {% endblock %}
 
