--- a/templates/index/userCenter.html
+++ b/templates/index/userCenter.html
@@ -200,8 +200,8 @@
 				</a>
 				</li>
 				<li>
-				<a href="#">
-				<span class="n-left"><em class="n-icon"><img src="{% static '/userCenter/icon-baibx.png' %}" alt=""></em>这确实是一个问题</span>
+				<a href="/myNext">
+				<span class="n-left"><em class="n-icon"><img src="{% static '/userCenter/icon-baibx.png' %}" alt=""></em>查看下级</span>
 				<span class="n-right">
 				<em class="n-jt-r"><img src="https://m.wukonglicai.com/extra/userRedAccount/img/ico-right-sj.svg" alt=""></em></span>
 				</a>
