--- a/templates/index/userCenter.html
+++ b/templates/index/userCenter.html
@@ -107,10 +107,16 @@
 					{% endif %}						
 					
 					
-				<!-- 
-					<p class="n-vip-level"><span>会员等级</span></p>
-				-->
+				<!---->
+					{% if request.session.is_login %}
+						<p class="n-vip-level"><span>{{ YourLevel }}</span></p>
+					{% else %}
+						<p class="n-vip-level"><span>会员等级</span></p>
+					{% endif %}
+
 				</dd>
+
+					<p style="margin-left:1rem;color:#666">您离下一级还需N位金主</p>
 				</dl>
 				</div>
 				<span class="n-msg" id="tomsg"><img src="{% static '/userCenter/icon-msg.png' %}" alt=""><em id="msgcount" style="display:none;"></em></span>
@@ -237,12 +243,28 @@
 
 
 		 {% if messages %}
-	        <script>
-	            {% for msg in messages %}
-	                alert('{{ msg.message }}');
+
+		<div class="mengc" style="box-sizing: border-box; position: fixed; top: 0px; bottom: 0px; width: 100%; padding-left: 0.7rem; padding-right: 0.7rem; background-color: rgba(0, 0, 0, 0.5); z-index: 9999; font-size: 0.24rem;">
+			<div class="tk-box" style="position: relative; top: 3.2rem; box-sizing: border-box; width: 100%; background-color: rgb(255, 255, 255); padding: 0.5rem 0.31rem 0.5rem 0.3rem; border-radius: 0.2rem;">
+				{% for msg in messages %}
+	             {{ msg.message }}
 	            {% endfor %}
-	        </script>
-	    {% endif %}
+				<div class="close" onclick="close_box_body()" style="width: 0.66rem; height: 0.66rem; border: 1px solid rgb(255, 255, 255); border-radius: 50%; position: absolute; left: 50%; bottom: -1.1rem; margin-left: -0.33rem;">
+					<div class="before" style="position: absolute; height: 1px; width: 0.4rem; top: 0.32rem; left: 0.13rem; background-color: rgb(255, 255, 255); transform: rotate(45deg);">
+
+					</div>
+					<div class="after" style="position: absolute; height: 1px; width: 0.4rem; top: 0.32rem; left: 0.13rem; background-color: rgb(255, 255, 255); transform: rotate(-45deg);">
+
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+
+		{% endif %}
+
+
 
 
 		{% else %}
