--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,3 +11,15 @@ body{
 a{
 	color: #666;
 }
+.mengc{
+    width:100%;
+    height:100%;
+}
+.tk-box{
+    width:100%;
+    height:30%;
+}
+.close{
+    width:20%;
+    height:10%;
+}
