--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -45,9 +45,9 @@
 
 <div class="container-fluid padding ">
 	<div class="row text-center">
-		<a class="col-3" href="/newguide">
+		<a class="col-3" href="/guide">
 			<img class="col-12" src="{% static 'images/index/col-1.png' %}">
-			<span >新手礼包</span>
+			<span >大发指南</span>
 		</a>
 
 		<a class="col-3" href="http://dfpt.com/">
