--- a/templates/index/newguide.html
+++ b/templates/index/newguide.html
@@ -310,6 +310,9 @@
 
 
 
+<div class="tk-box" style="position: relative; top: 3.2rem; box-sizing: border-box; width: 100%; background-color: rgb(255, 255, 255); padding: 0.5rem 0.31rem 0.5rem 0.3rem; border-radius: 0.2rem;">今日盈利：这个数字就是在今天3点之前，你的预期盈利，会出现在你指定的账户中，记得及时查看。<div class="close" onclick="close_box_body()" style="width: 0.66rem; height: 0.66rem; border: 1px solid rgb(255, 255, 255); border-radius: 50%; position: absolute; left: 50%; bottom: -1.1rem; margin-left: -0.33rem;"><div class="before" style="position: absolute; height: 1px; width: 0.4rem; top: 0.32rem; left: 0.13rem; background-color: rgb(255, 255, 255); transform: rotate(45deg);"></div><div class="after" style="position: absolute; height: 1px; width: 0.4rem; top: 0.32rem; left: 0.13rem; background-color: rgb(255, 255, 255); transform: rotate(-45deg);"></div></div></div>
+
+
 
 
 {% if messages %}
