--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,15 +14,44 @@ a{
 .mengc{
     width:100%;
     height:100%;
+    box-sizing: border-box;
+    position: fixed;
+    top: 0px;
+    bottom: 0px;
+    padding-left: 0rem;
+    padding-right: 0rem;
+    margin-left:-1rem;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    font-size: 1rem;
 }
 .tk-box{
-    width:100%;
-    height:30%;
+    width: 80%;
+    margin-left: 10%;
+    height: 30%;
+    position: relative;
+    top: 7rem;
+    box-sizing: border-box;
+    background-color: rgb(255, 255, 255);
+    padding: 0.5rem 0.31rem 0.5rem 0.3rem;
+    border-radius: 0.2rem;
+
+
 }
 .close{
     width:20%;
     height:10%;
+    width: 0.66rem;
+    height: 0.66rem;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    bottom: -1.1rem;
+    margin-left: -0.33rem;
+
 }
+
+
 
 .msg-css{
     box-sizing: border-box;
@@ -38,23 +67,5 @@ a{
 }
 
 
-.tk-box{
-    position: relative;
-    top: 3.2rem;
-    box-sizing: border-box;
-    width: 100%;
-    background-color: rgb(255, 255, 255);
-    padding: 0.5rem 0.31rem 0.5rem 0.3rem;
-    border-radius: 0.2rem;
-}
 
-.close{
-    width: 0.66rem;
-    height: 0.66rem;
-    border: 1px solid rgb(255, 255, 255);
-    border-radius: 50%;
-    position: absolute;
-    left: 50%;
-    bottom: -1.1rem;
-    margin-left: -0.33rem;
-}
+/**/
