--- a/templates/base.html
+++ b/templates/base.html
@@ -15,12 +15,13 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="https://cdn.bootcss.com/font-awesome/5.10.0-11/css/solid.css" rel="stylesheet">
-    <script src="https://cdn.bootcss.com/font-awesome/5.10.0-11/js/all.js"></script>
+    <script src="https://cdn.bootcss.com/font-awesome/5.10.0-12/js/all.js"></script>
+
 
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
-   
+    <script src="{% static 'javascripts/base.js' %}"></script>
     <title>
       {% block title %}
         replace title
@@ -33,11 +34,14 @@
     {% block js %}
 
     {% endblock %}
+
   </head>
   <body>
     {% block content %}
     	replace me
     {% endblock %}
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -45,7 +49,7 @@
     <script type="text/javascript">
       if(!window.jQuery){
         var script = document.createElement('script');
-        script.src = "{% static 'javascript/jquery.min.js' %}";
+        script.src = "{% static 'javascripts/jquery.min.js' %}";
         document.body.appendChild(script);
       }
     </script>
@@ -61,6 +65,28 @@
       }
     </script>
 
+		  {% if messages %}
+    <script>
 
+    $(document).ready(function(){
+        $(".close").click(function(){
+            $(".mengc").hide();
+        });
+    });
+    </script>
+
+              <div class="mengc"  id="msg123123" style="">
+                  <div class="tk-box" >
+                      {% for msg in messages %}
+                       {{ msg.message }}
+                      {% endfor %}
+                      <div class="close" >
+                         <i class="far fa-times-circle"></i>
+                      </div>
+                  </div>
+              </div>
+
+
+		  {% endif %}
   </body>
 </html>
