--- a/templates/login/loginRegister.html
+++ b/templates/login/loginRegister.html
@@ -30,7 +30,7 @@
     <a href="/index/" class="col-1 p-1 text-center">
         <i class="fas fa-chevron-left"></i>
     </a>
-    <div class="col-11 p-1 text-center"><h4 class="mt-2">注册页面</h4></div>
+    <div class="col-11 p-1 text-center"><h4 class="mt-2">登录注册</h4></div>
     <hr class="m-1" style="width:100%">
 </div>
 
