--- a/static/css/login/loginRegister.css
+++ b/static/css/login/loginRegister.css
@@ -89,6 +89,12 @@
     float: left;
     width: 70%;
 }
+.form-line-list img{
+    border:2px solid #333;
+    border-radius: .25rem;
+    margin: .5rem;
+    box-shadow: 5px 5px 5px #000;
+}
 .form-line i[class*="icon"] {
     font-size: 1.6rem;
 }
